--- a/index.html
+++ b/index.html
@@ -3,18 +3,150 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Design Exercise</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <div class="container">
-      <p class="bigtext">Hello there!</p>
-      <p class="bigtext">🤠</p>
-    </div>
-    <div class="box-container">
-      <div class="box">
-        <p>and welcome to my page.</p>
+    <div id="Row1">
+      <div>
+        <img id="pic1" src="images/portrait.jpg" alt="pic" />
+      </div>
+      <div id="head">
+        <h1>Hi! Welcome to my Website</h1>
+        <p id="aboutme">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nemo
+          quos facilis! Nam non architecto sit autem dolorum possimus, harum
+          perspiciatis est dignissimos! Commodi omnis sapiente voluptatibus sint
+          vero laborum earum voluptas deleniti praesentium accusantium maxime
+          eius architecto cum minus dolorum nemo est sequi, impedit iure facere.
+          Recusandae dignissimos debitis blanditiis temporibus exercitationem
+          labore nobis perferendis minus eos et quasi assumenda possimus
+          consequuntur, vero incidunt praesentium neque magni est architecto hic
+          consequatur error sequi? Nulla officia facere fugit impedit tempora
+        </p>
       </div>
     </div>
+    <div id="Row2"></div>
+    <div id="Row3">
+      <div class="cell cell1"><p>Project's</p></div>
+      <div class="cell cell2"><p>Experience</p></div>
+      <div class="cell cell3"><p>Skills</p></div>
+    </div>
+    <div id="skills">
+      <h1>Siklls <i class="fa fa-cogs"></i></h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis expedita
+        dolorum necessitatibus debitis nihil ratione! Neque, sunt, est illum
+        doloribus eaque, saepe excepturi quis magnam distinctio deserunt eum
+        unde quas eveniet amet odit alias deleniti sed laudantium! Tempore,
+        tenetur nihil! Aliquam dolorum et unde temporibus. Eum molestiae culpa
+        alias consequatur doloremque eos, officia consectetur necessitatibus
+        porro ipsa quia quisquam laboriosam sapiente quidem. Blanditiis
+        laudantium, vitae natus quasi distinctio enim perferendis quod eligendi,
+        nobis, at repellat officia? Illum accusamus debitis tenetur, ipsa nulla
+        blanditiis consequatur aliquam odio suscipit necessitatibus magni
+        commodi nemo atque eaque earum voluptates voluptatibus vel repellendus
+        voluptatum. Iusto labore ratione, voluptate quibusdam delectus quod.
+        Mollitia magnam ipsa repellendus molestiae, provident rem dolores
+        perferendis corporis quae quas voluptatem sint iusto unde vitae nemo
+        dolore, soluta sapiente non delectus deserunt fugit inventore illum
+        voluptatum culpa! Facere ratione voluptates dolore, quo ipsum repellat
+        inventore reiciendis sint. Illo, accusantium fugit inventore perferendis
+        recusandae, placeat explicabo quos incidunt modi, quae voluptate quasi
+        unde aliquid aperiam! Quos dolore incidunt ex perspiciatis in totam
+        impedit, animi maiores laudantium dolores autem saepe beatae fuga dicta
+        non. Cupiditate porro sint quis possimus ducimus rem nostrum id
+        obcaecati aut eveniet dolorem eligendi odio accusantium, eum aliquid
+        perferendis mollitia. Itaque voluptas quas molestiae eveniet rerum,
+        veniam deserunt et, consequatur veritatis obcaecati iure impedit quaerat
+        ea enim consequuntur dolor adipisci. Quam harum quia dolores nihil
+        tenetur, hic beatae eaque fuga quis, iure voluptates nulla amet ex
+        excepturi nobis explicabo magni veniam voluptate sit, impedit recusandae
+        illum obcaecati. Similique, quae fuga!
+      </p>
+    </div>
+    <div id="experience">
+      <h1>Experience <i class="fa fa-thumbs-up" aria-hidden="true"></i></h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+        nostrum atque aut totam nesciunt maiores, suscipit eum quos quam
+        voluptatibus accusantium dolorum velit magni, odio, rem aperiam hic?
+        Fuga nostrum, aut cum nesciunt, hic accusantium labore tenetur, totam
+        voluptatibus suscipit quibusdam atque? Nihil sapiente fugit repellendus
+        eos odit inventore quia suscipit optio autem! Distinctio ratione quo
+        sequi adipisci illum laboriosam nisi incidunt soluta minima corporis
+        minus illo, temporibus, non vero eveniet in unde tenetur eius nihil quia
+        veniam! Iste rem laudantium dicta, assumenda similique dolore aliquid
+        incidunt at accusamus est quibusdam eaque perspiciatis reiciendis
+        eveniet libero, illum veritatis neque nihil. Veniam, quos in! Adipisci
+        non assumenda soluta? Saepe reprehenderit tempora beatae velit numquam
+        hic mollitia, nesciunt sint reiciendis veniam, laborum rerum dicta aut
+        est maxime quod explicabo cum ipsa recusandae tenetur harum tempore
+        culpa fugit? Sit nostrum voluptatum, asperiores corrupti voluptate
+        ratione beatae itaque, labore quas cupiditate ab delectus at laborum
+        officiis in! Eius unde ut sequi dolorem. Tempore dolorum doloribus ea,
+        cupiditate voluptatum maxime aut eaque aliquid rerum, blanditiis
+        distinctio, excepturi vel? Necessitatibus libero praesentium neque a
+        debitis, vero eius dolorem! Veniam assumenda aspernatur voluptas quae
+        velit voluptates consequatur temporibus quaerat quam minima iure
+        doloribus harum aut reprehenderit optio molestiae in, odit nobis
+        veritatis sit! Culpa et impedit distinctio nam ad dolor iure explicabo?
+        Quo nobis excepturi corrupti, esse ducimus illo dolor eligendi eos sit
+        eaque? Cum quisquam dolor tempore nihil doloremque sint doloribus
+        perferendis illum voluptatum eligendi fugit mollitia accusamus quibusdam
+        exercitationem laborum explicabo, beatae, animi provident debitis.
+      </p>
+    </div>
+    <div id="projects">
+      <h1>Project's <i class="fa fa-folder-open" aria-hidden="true"></i></h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias,
+        deleniti, natus provident tempore, consequuntur impedit ex libero
+        corrupti quisquam voluptates culpa adipisci ullam harum quas. Obcaecati
+        vitae aspernatur doloremque, neque quidem totam fugit minus libero?
+        Quibusdam expedita illum officia placeat porro quas laudantium odit, vel
+        maxime aliquam repudiandae pariatur harum sapiente, ullam error possimus
+        non iusto ea accusamus, sit fugiat dolore excepturi optio! Molestias
+        suscipit amet illum iste fugit, exercitationem eveniet maxime, veniam
+        dicta autem quo veritatis neque? Enim magni eveniet modi commodi maiores
+        sit fugit voluptate dignissimos porro? Harum, a quidem adipisci iusto
+        cupiditate nostrum facilis deserunt voluptatibus ullam itaque doloribus
+        fuga magnam voluptates quaerat alias incidunt, repudiandae sunt?
+        Pariatur, corporis. Repellendus ipsam quos deserunt voluptatibus maxime
+        saepe harum quasi, neque voluptate, explicabo ipsa doloribus iure,
+        distinctio sit quisquam optio. Non placeat exercitationem quisquam
+        cumque asperiores temporibus adipisci mollitia officia, quam aliquid?
+        Perspiciatis consectetur neque quam similique tempore laudantium aliquid
+        fugiat deserunt eveniet, nemo quo, amet exercitationem ratione! Sunt,
+        eos necessitatibus. Fuga consectetur, ad assumenda adipisci temporibus
+        quos incidunt natus, nihil dolore fugit cum id pariatur quidem sed eos
+        porro facere exercitationem. Hic perferendis explicabo tempora omnis sed
+        eos vitae! Similique nulla aperiam impedit qui itaque. Voluptates quasi
+        odio dignissimos, fugit sapiente quas ipsa odit corporis culpa quaerat
+        doloremque illum debitis cupiditate similique praesentium nam nobis
+        ipsum laborum dolorem, blanditiis ad dicta. Similique reprehenderit
+        alias consectetur voluptatum quisquam voluptatem sint laudantium impedit
+        corporis inventore modi quidem corrupti esse, nulla aperiam, eaque quos
+        voluptate mollitia amet deleniti consequuntur facere eum!
+      </p>
+    </div>
+    <div id="Row4">
+      <h1 id="contacth">contact info</h1>
+      <div id="contact-table">
+        <div><i class="fa fa-linkedin"></i></div>
+        <!-- LinkedIn icon -->
+        <div><i class="fa fa-envelope"></i></div>
+        <!-- Email (Gmail) icon -->
+        <div><i class="fa fa-instagram"></i></div>
+        <div><i class="fa fa-github"></i></div>
+        <!-- GitHub icon -->
+      </div>
+    </div>
+    <div id="Row5"><p>Languages</p></div>
   </body>
+  <footer>footer</footer>
 </html>
