--- a/index.html
+++ b/index.html
@@ -9,35 +9,39 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="script.js"></script>
   </head>
   <body>
     <div id="Row1">
-      <div>
-        <img id="pic1" src="images/portrait.jpg" alt="pic" />
+      <div id="profile-pic-container">
+          <img id="pic1" src="images/portrait.jpg" alt="Your Portrait" />
       </div>
-      <div id="head">
-        <h1>Hi! Welcome to my Website</h1>
-        <p id="aboutme">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nemo
-          quos facilis! Nam non architecto sit autem dolorum possimus, harum
-          perspiciatis est dignissimos! Commodi omnis sapiente voluptatibus sint
-          vero laborum earum voluptas deleniti praesentium accusantium maxime
-          eius architecto cum minus dolorum nemo est sequi, impedit iure facere.
-          Recusandae dignissimos debitis blanditiis temporibus exercitationem
-          labore nobis perferendis minus eos et quasi assumenda possimus
-          consequuntur, vero incidunt praesentium neque magni est architecto hic
-          consequatur error sequi? Nulla officia facere fugit impedit tempora
-        </p>
+      <div id="welcome-container">
+          <h1>Hi! I am <span id="name">Omar Emad</span>, Welcome to My Website</h1>
       </div>
-    </div>
+  </div>
+  <div id="about-me-section">
+    <h1> About Me</h1>
+      <p>Here's a little bit about me...</p>
+      <!-- Your introduction text goes here -->
+  </div>
+  
     <div id="Row2"></div>
     <div id="Row3">
-      <div class="cell cell1"><p>Project's</p></div>
-      <div class="cell cell2"><p>Experience</p></div>
-      <div class="cell cell3"><p>Skills</p></div>
-    </div>
+      <div class="cell cell1" >
+          <a href="#projects"><span>Projects</span></a>
+      </div>
+      <div class="cell cell2" >
+          <a href="#experience"><span>Experience</span></a>
+      </div>
+      <div class="cell cell3" >
+          <a href="#skills"><span>Skills</span></a>
+      </div>
+  </div>
+  
+  
     <div id="skills">
-      <h1>Siklls <i class="fa fa-cogs"></i></h1>
+      <h1>Skills <i class="fa fa-cogs"></i></h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis expedita
         dolorum necessitatibus debitis nihil ratione! Neque, sunt, est illum
@@ -45,30 +49,30 @@
         unde quas eveniet amet odit alias deleniti sed laudantium! Tempore,
         tenetur nihil! Aliquam dolorum et unde temporibus. Eum molestiae culpa
         alias consequatur doloremque eos, officia consectetur necessitatibus
-        porro ipsa quia quisquam laboriosam sapiente quidem. Blanditiis
-        laudantium, vitae natus quasi distinctio enim perferendis quod eligendi,
-        nobis, at repellat officia? Illum accusamus debitis tenetur, ipsa nulla
-        blanditiis consequatur aliquam odio suscipit necessitatibus magni
-        commodi nemo atque eaque earum voluptates voluptatibus vel repellendus
-        voluptatum. Iusto labore ratione, voluptate quibusdam delectus quod.
-        Mollitia magnam ipsa repellendus molestiae, provident rem dolores
-        perferendis corporis quae quas voluptatem sint iusto unde vitae nemo
-        dolore, soluta sapiente non delectus deserunt fugit inventore illum
-        voluptatum culpa! Facere ratione voluptates dolore, quo ipsum repellat
-        inventore reiciendis sint. Illo, accusantium fugit inventore perferendis
-        recusandae, placeat explicabo quos incidunt modi, quae voluptate quasi
-        unde aliquid aperiam! Quos dolore incidunt ex perspiciatis in totam
-        impedit, animi maiores laudantium dolores autem saepe beatae fuga dicta
-        non. Cupiditate porro sint quis possimus ducimus rem nostrum id
-        obcaecati aut eveniet dolorem eligendi odio accusantium, eum aliquid
-        perferendis mollitia. Itaque voluptas quas molestiae eveniet rerum,
-        veniam deserunt et, consequatur veritatis obcaecati iure impedit quaerat
-        ea enim consequuntur dolor adipisci. Quam harum quia dolores nihil
-        tenetur, hic beatae eaque fuga quis, iure voluptates nulla amet ex
-        excepturi nobis explicabo magni veniam voluptate sit, impedit recusandae
-        illum obcaecati. Similique, quae fuga!
+        
       </p>
-    </div>
+      <div
+        class="skill-item"
+        data-skill-detail="Expert in HTML5 and semantic markup."
+      >
+        <p>HTML</p>
+      </div>
+      <div
+        class="skill-item"
+        data-skill-detail="Advanced CSS techniques and animations."
+      >
+        <p>CSS</p>
+      </div>
+      <div
+        class="skill-item"
+        data-skill-detail="Proficient in modern JavaScript ES6+."
+      >
+        <p>JavaScript</p>
+      </div>
+      <div class="skill-item" data-skill-detail="Your skill description here.">
+        <p>New Skill</p>
+      </div>
+
     <div id="experience">
       <h1>Experience <i class="fa fa-thumbs-up" aria-hidden="true"></i></h1>
       <p>
@@ -80,26 +84,27 @@
         eos odit inventore quia suscipit optio autem! Distinctio ratione quo
         sequi adipisci illum laboriosam nisi incidunt soluta minima corporis
         minus illo, temporibus, non vero eveniet in unde tenetur eius nihil quia
-        veniam! Iste rem laudantium dicta, assumenda similique dolore aliquid
-        incidunt at accusamus est quibusdam eaque perspiciatis reiciendis
-        eveniet libero, illum veritatis neque nihil. Veniam, quos in! Adipisci
-        non assumenda soluta? Saepe reprehenderit tempora beatae velit numquam
-        hic mollitia, nesciunt sint reiciendis veniam, laborum rerum dicta aut
-        est maxime quod explicabo cum ipsa recusandae tenetur harum tempore
-        culpa fugit? Sit nostrum voluptatum, asperiores corrupti voluptate
-        ratione beatae itaque, labore quas cupiditate ab delectus at laborum
-        officiis in! Eius unde ut sequi dolorem. Tempore dolorum doloribus ea,
-        cupiditate voluptatum maxime aut eaque aliquid rerum, blanditiis
-        distinctio, excepturi vel? Necessitatibus libero praesentium neque a
-        debitis, vero eius dolorem! Veniam assumenda aspernatur voluptas quae
-        velit voluptates consequatur temporibus quaerat quam minima iure
-        doloribus harum aut reprehenderit optio molestiae in, odit nobis
-        veritatis sit! Culpa et impedit distinctio nam ad dolor iure explicabo?
-        Quo nobis excepturi corrupti, esse ducimus illo dolor eligendi eos sit
-        eaque? Cum quisquam dolor tempore nihil doloremque sint doloribus
-        perferendis illum voluptatum eligendi fugit mollitia accusamus quibusdam
-        exercitationem laborum explicabo, beatae, animi provident debitis.
+      
       </p>
+      <div class="timeline">
+        <div class="timeline-item">
+            <div class="timeline-icon"></div>
+            <div class="timeline-content">
+                <h2>Title 1</h2>
+                <p>Date Range 1</p>
+                <p>Description of experience 1...</p>
+            </div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-icon"></div>
+            <div class="timeline-content">
+                <h2>Title 2</h2>
+                <p>Date Range 2</p>
+                <p>Description of experience 2...</p>
+            </div>
+        </div>
+        <!-- Add more timeline items as needed -->
+    </div>
     </div>
     <div id="projects">
       <h1>Project's <i class="fa fa-folder-open" aria-hidden="true"></i></h1>
@@ -114,28 +119,22 @@
         suscipit amet illum iste fugit, exercitationem eveniet maxime, veniam
         dicta autem quo veritatis neque? Enim magni eveniet modi commodi maiores
         sit fugit voluptate dignissimos porro? Harum, a quidem adipisci iusto
-        cupiditate nostrum facilis deserunt voluptatibus ullam itaque doloribus
-        fuga magnam voluptates quaerat alias incidunt, repudiandae sunt?
-        Pariatur, corporis. Repellendus ipsam quos deserunt voluptatibus maxime
-        saepe harum quasi, neque voluptate, explicabo ipsa doloribus iure,
-        distinctio sit quisquam optio. Non placeat exercitationem quisquam
-        cumque asperiores temporibus adipisci mollitia officia, quam aliquid?
-        Perspiciatis consectetur neque quam similique tempore laudantium aliquid
-        fugiat deserunt eveniet, nemo quo, amet exercitationem ratione! Sunt,
-        eos necessitatibus. Fuga consectetur, ad assumenda adipisci temporibus
-        quos incidunt natus, nihil dolore fugit cum id pariatur quidem sed eos
-        porro facere exercitationem. Hic perferendis explicabo tempora omnis sed
-        eos vitae! Similique nulla aperiam impedit qui itaque. Voluptates quasi
-        odio dignissimos, fugit sapiente quas ipsa odit corporis culpa quaerat
-        doloremque illum debitis cupiditate similique praesentium nam nobis
-        ipsum laborum dolorem, blanditiis ad dicta. Similique reprehenderit
-        alias consectetur voluptatum quisquam voluptatem sint laudantium impedit
-        corporis inventore modi quidem corrupti esse, nulla aperiam, eaque quos
-        voluptate mollitia amet deleniti consequuntur facere eum!
+  
       </p>
+      <div class="project-item">
+        <h2>Project 1</h2>
+        <p>Description of project 1...</p>
+        <a href="http://example.com/project1" target="_blank">View Project</a>
+    </div>
+    <div class="project-item">
+        <h2>Project 2</h2>
+        <p>Description of project 2...</p>
+        <a href="http://example.com/project2" target="_blank">View Project</a>
+    </div>
+    <!-- Add more project items as needed -->
     </div>
     <div id="Row4">
-      <h1 id="contacth">contact info</h1>
+      <h1 id="contacth">Contact info</h1>
       <div id="contact-table">
         <div><i class="fa fa-linkedin"></i></div>
         <!-- LinkedIn icon -->
@@ -146,7 +145,22 @@
         <!-- GitHub icon -->
       </div>
     </div>
-    <div id="Row5"><p>Languages</p></div>
+    <div id="Row5">
+      <h2>Languages</h2>
+      <ul id="language-list">
+        <li class="language">
+          <span class="lang-name">Arabic</span>
+          <span class="lang-level">Native</span>
+        </li>
+        <li class="language">
+          <span class="lang-name">English</span>
+          <span class="lang-level">Fluent</span>
+        </li>
+        <li class="language">
+          <span class="lang-name">Japanese</span>
+          <span class="lang-level">Beginner</span>
+        </li>
+      </ul>
+    </div>
   </body>
-  <footer>footer</footer>
 </html>
